// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for Heap's trackEvent destination action: all fields 1`] = `
Object {
  "app_id": "xqYHVWXiU0In",
  "identity": "xqYHVWXiU0In",
  "properties": Object {
    "anonymous_id": "xqYHVWXiU0In",
    "testType": "xqYHVWXiU0In",
  },
}
`;

exports[`Testing snapshot for Heap's trackEvent destination action: required fields 1`] = `
Object {
  "app_id": "xqYHVWXiU0In",
  "identity": "xqYHVWXiU0In",
  "properties": Object {
    "anonymous_id": "xqYHVWXiU0In",
  },
}
`;
